# startup-ops-env

./: .gitignore  Dockerfile  FINAL_VALIDATION_REPORT.md  README.md  VALIDATION_REPORT.md  api.py  app.py  cli_result.txt  docker-compose.yml  inference.py  main.py  openenv.yaml  out.txt  pyproject.toml  requirements.txt  run.sh  test_results.txt  validate.py
agents/: __init__.py  baseline.py
configs/: config.yaml
env/: __init__.py  core.py  dynamics.py  generator.py  grader.py  llm_parser.py  models.py  reward.py  scenarios.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/components/: EmailInput.tsx  ModeToggle.tsx  ResultsDisplay.tsx  ScenarioSelector.tsx  TaskInput.tsx
frontend/lib/: api.ts
frontend/pages/: _error.tsx  index.tsx
frontend/styles/: globals.css
server/: __init__.py  app.py
tests/: __init__.py  test_env.py
